--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/login" *ngIf="!isAuthed">{{'header.Login'|translate}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" *ngIf="!isAuthed || user?.role == 'user'"    routerLink="/products/category">Products</a>
+          <a class="nav-link" routerLinkActive="active" *ngIf="!isAuthed || user?.role == 'user'"    routerLink="/products/category">{{'header.Products'|translate}}</a>
           </li>
 
         <li class="nav-item">
