--- a/src/app/Component/about-us/about-us.component.css
+++ b/src/app/Component/about-us/about-us.component.css
@@ -1,12 +1,11 @@
-/* .container-fluid, */
+/* Container for the about section */
 #aboutUs {
-  width: 100%;
-  height: 100vh;
+  position: relative;
+  margin-top: -48px;
   background-image: url("../../../assets/project images/aboutus.jpeg");
   background-position: center;
   background-size: cover;
   position: relative;
-  margin-top: -48px;
 }
 
 #aboutUs::before {
@@ -17,37 +16,26 @@
   width: 100%;
   height: 100%;
   background-color: #2f3b3660;
-  z-index: 0;
+  z-index: -1;
 }
 
 .c1 {
   background-color: #1987546c;
-  position: relative;
-  z-index: 1;
   color: white;
   padding: 50px;
-  border-radius: 10px 10px;
+  border-radius: 10px;
   text-align: center;
 }
 
-h2 {
+.c1 h2 {
   font-size: bold;
-}
-
-.c2 {
-  margin-top: 50px;
-}
-
-.c2 p {
-  font-size: 13px;
 }
 
 .col2 {
   padding: 15px 0;
-
 }
 
 .c2 h2,
 .list h2 {
-  color: #198754
+  color: #198754;
 }
