--- a/src/app/Component/about-us/about-us.component.html
+++ b/src/app/Component/about-us/about-us.component.html
@@ -1,14 +1,14 @@
 <div *ngIf="isLoading">
   <app-loading-spinner></app-loading-spinner>
 </div>
+
 <div id="aboutUs" [dir]="'dir' | translate">
-  <div class="c1 container">
-    <h2>{{'About.About Us'|translate}}</h2>
-    <p>
-      {{'About.About-txt'|translate}}
-    </p>
+  <div class="container-fluid c1">
+    <h2>{{'About.About Us' | translate}}</h2>
+    <p>{{'About.About-txt' | translate}}</p>
   </div>
-  <div class="container c2">
+
+  <div class="container c2 mt-1">
     <div class="row gy-3 gy-md-4 gy-lg-0">
       <div class="col-12 col-lg-6">
         <div class="card bg-light p-3 m-0">
@@ -19,13 +19,14 @@
             </div>
             <div class="col-md-7">
               <div class="card-body p-0">
-                <h2 class="card-title h4 mb-3">{{'About.Our Mission'|translate}}</h2>
-                <p class="card-text lead">{{'About.Mission-txt'|translate}}</p>
+                <h2 class="card-title h4 mb-3 text-md-center">{{'About.Our Mission' | translate}}</h2>
+                <p class="card-text lead" style="font-size:14px">{{'About.Mission-txt' | translate}}</p>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <div class="col-12 col-lg-6 col2">
         <div class="card bg-light p-3 m-0">
           <div class="row gy-3 gy-md-0 align-items-md-center">
@@ -35,8 +36,8 @@
             </div>
             <div class="col-md-7">
               <div class="card-body p-0">
-                <h2 class="card-title h4 mb-3">{{'About.Our Story'|translate}}</h2>
-                <p class="card-text lead">{{'About.Story-txt'|translate}}</p>
+                <h2 class="card-title h4 mb-3">{{'About.Our Story' | translate}}</h2>
+                <p class="card-text lead" style="font-size:14px">{{'About.Story-txt' | translate}}</p>
               </div>
             </div>
           </div>
@@ -45,18 +46,21 @@
     </div>
   </div>
 </div>
-<div>
-  <div class="container list mb-5 w-75" [dir]="'dir' | translate">
-    <h2 class=" text-center mt-5 mb-5">{{'About.Why Choose Us?'|translate}}</h2>
-    <ol class="list-group list-group-numbered ">
-      <li class="list-group-item list-group-item-secondary p-3"><span class="text-success">{{'About.Choose1-txt'|translate}}</span> We
-        {{'About.Choose1'|translate}}</li>
-      <li class="list-group-item list-group-item-secondary"><span class="text-success">{{'About.Choose2-txt'|translate}}</span> Every
-        {{'About.Choose2'|translate}}.</li>
-      <li class="list-group-item list-group-item-secondary"><span class="text-success">{{'About.Choose3-txt'|translate}}</span>
-        {{'About.Choose3'|translate}}.</li>
-      <li class="list-group-item list-group-item-secondary"><span class="text-success">{{'About.Choose4-txt'|translate}}</span> We
-        {{'About.Choose4'|translate}}.</li>
-    </ol>
-  </div>
+
+<div class="container-fluid list mb-5 w-75" [dir]="'dir' | translate">
+  <h2 class="text-center mt-5 mb-5">{{'About.Why Choose Us?' | translate}}</h2>
+  <ol class="list-group list-group-numbered">
+    <li class="list-group-item list-group-item-secondary p-3"><span class="text-success">{{'About.Choose1-txt' |
+        translate}}</span> We
+      {{'About.Choose1' | translate}}</li>
+    <li class="list-group-item list-group-item-secondary"><span class="text-success">{{'About.Choose2-txt' |
+        translate}}</span> Every
+      {{'About.Choose2' | translate}}.</li>
+    <li class="list-group-item list-group-item-secondary"><span class="text-success">{{'About.Choose3-txt' |
+        translate}}</span>
+      {{'About.Choose3' | translate}}.</li>
+    <li class="list-group-item list-group-item-secondary"><span class="text-success">{{'About.Choose4-txt' |
+        translate}}</span> We
+      {{'About.Choose4' | translate}}.</li>
+  </ol>
 </div>
