--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.html
@@ -112,7 +112,13 @@
         </div>
       </div>
     </div>
-    <div>
+    <button class="btn btn-info"  routerLink="Orders"  >Orders</button>
+        <button class="btn btn-info" routerLink="Products" >Products</button>
+        <button class="btn btn-info" routerLink="Users" >Users</button>
+        <div>
+          <router-outlet></router-outlet>
+        </div>
+    <!-- <div>
       <mat-tab-group class=" d-block mb-3">
         <mat-tab label="Orders State">
           <ng-template mat-tab-label class="c1">
@@ -129,6 +135,6 @@
           <app-product ></app-product>
         </mat-tab>
       </mat-tab-group>
-    </div>
+    </div> -->
 
   </mat-sidenav-content>
