resolivng lasts confilects

--- a/src/app/Component/Admin/admin-users/admin-users.component.html
+++ b/src/app/Component/Admin/admin-users/admin-users.component.html
@@ -19,7 +19,7 @@
            <div class="deleteContainer" >
             <span class="deletBtn">
               <button class="btn btn-danger"  (click)="OpenDialog(user._id) " title="Remove Customer">
-                <i class="bi bi-trash-fill"></i>
+                <i class="bi bi-trash-fill"></i> Remove 
               </button>
             </span>
            </div>
