--- a/src/app/Component/signup/signup.component.css
+++ b/src/app/Component/signup/signup.component.css
@@ -9,7 +9,8 @@ form {
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  width: 60%
+  width: 45%;
+
 }
 
 form h1 {
@@ -54,6 +55,7 @@ form h1 {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-left: 75%;
 
 }
 
