update header component for dropdown for admin

--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -32,10 +32,19 @@
             <a class="nav-link" *ngIf="isAuthed && user?.role == 'user' " routerLinkActive="active" routerLink="/Profile">{{ user?.fname | uppercase }} {{ user?.lname | uppercase }} </a>
             <a class="nav-link" *ngIf="isAuthed && user?.role == 'admin' " routerLinkActive="active" routerLink="/Admin">{{ user?.fname | uppercase }} {{ user?.lname | uppercase }} </a>
           </button>
+          <!-- //dropdown for user  -->
             <ul class="dropdown-menu dropdown-content" aria-labelledby="dropdownMenuButton1" *ngIf="isAuthed && user?.role == 'user'">
               <li><a class="dropdown-item" routerLink="/Profile" (click)="getUser()">{{'header.Your Account'|translate}}</a></li>
               <li><a class="dropdown-item" routerLink="/updateProfile">update Profile</a></li>
               <li><a class="dropdown-item" href="#">{{'header.Your Order'|translate}}</a></li>
+              <li><a class="nav-link" (click)="onLogout()" >{{'header.Logout'|translate}}</a>
+              </li>
+            </ul>
+            <!-- dropdown for admin -->
+            <ul class="dropdown-menu dropdown-content" aria-labelledby="dropdownMenuButton1" *ngIf="isAuthed && user?.role == 'admin'">
+              <!-- <li><a class="dropdown-item" routerLink="/Profile" (click)="getUser()">{{'header.Your Account'|translate}}</a></li>
+              <li><a class="dropdown-item" routerLink="/updateProfile">update Profile</a></li> -->
+              <li><a class="dropdown-item" routerLink="Admin/Products">Settings</a></li>
               <li><a class="nav-link" (click)="onLogout()" >{{'header.Logout'|translate}}</a>
               </li>
             </ul>
