--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -18,10 +18,14 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../../../assets/project images/1.png" class="d-block w-100" alt="1">
+                <!-- <img src="../../../assets/project images/1.png" class="d-block w-100" alt="1"> -->
+                <img src="../../../assets/project images/" class="d-block w-100" alt="1">
               </div>
               <div class="carousel-item">
-                <img src="../../../assets/project images/2.png" class="d-block w-100" alt="2">
+                <!-- <img src="../../../assets/project images/2.png" class="d-block w-100" alt="2"> -->
+                <img src="https://t3.ftcdn.net/jpg/04/55/53/78/360_F_455537818_2AwVoujHe2gH7IRYTgrZ932Nt4MdwTXD.jpg
+                " class="d-block w-100" alt="2">
+
               </div>
               <div class="carousel-item">
                 <img src="../../../assets/project images/3.png" class="d-block w-100" alt="3">
