--- a/src/app/Component/admin-dashboard/product/product.component.css
+++ b/src/app/Component/admin-dashboard/product/product.component.css
@@ -7,6 +7,25 @@
   margin-bottom: 5px;
   font-size: 14px;
 }
+.mb-3 {
+  margin-bottom: 15px;
+}
+
+/* Style for the button */
+.btn-primary {
+  color: #fff;
+  background-color: #198754;
+  border-color: #198754;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 50px;
+  transition: all 0.3s ease;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #146c43;
+  border-color: #146c43;
+}
 .image-container {
   width: 80px;
   height: 80px;
