--- a/src/app/Component/admin-dashboard/product/product.component.html
+++ b/src/app/Component/admin-dashboard/product/product.component.html
@@ -1,5 +1,11 @@
 <div class="container">
   <div class="row">
+        <div class="col-md-12 text-center">
+          <button class="btn btn-primary mb-3" (click)="addProduct()" title="Add New Product">
+            <i class="bi bi-plus"></i> Add New Product
+          </button>
+        </div>
+
     <div class="col-md-12 text-center">
       <div class="panel">
         <div class="panel-heading bg-primary text-white">
