--- a/src/app/Component/Admin/add-product/add-product.component.html
+++ b/src/app/Component/Admin/add-product/add-product.component.html
@@ -7,7 +7,7 @@
       <form class="row g-3 border rounded p-4 shadow-sm" (ngSubmit)="confirmAddProduct(addForm)" #addForm="ngForm" enctype="multipart/form-data">
         <div class="col-12">
           <div class="text-center mb-3">
-            <img [src]="image" class="rounded-circle img-thumbnail" alt="Product Image" style="width: 150px; height: 150px;">
+            <!-- <img [src]="image" class="rounded-circle img-thumbnail" alt="Product Image" style="width: 150px; height: 150px;"> -->
           <input type="file" class="form-control" id="image" name="image" (change)="onFileSelected($event)" ngModel #image="ngModel" required accept="image/*">
           <div class="form-text" *ngIf="!image.valid && (image.touched || image.dirty)">
             Please provide a valid image (.jpg, .jpeg, .png, .gif)
