--- a/src/app/Component/Admin/edit-product/edit-product.component.html
+++ b/src/app/Component/Admin/edit-product/edit-product.component.html
@@ -80,7 +80,7 @@
               </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary" [disabled]="editProductForm?.invalid">Save changes</button>
+              <button type="submit" class="btn btn-primary" [disabled]="editProductForm.invalid">Save changes</button>
             </div>
           </form>
       </div>
