--- a/src/app/Component/admin-dashboard/product/product.component.html
+++ b/src/app/Component/admin-dashboard/product/product.component.html
@@ -66,5 +66,8 @@
         </div>
       </div>
     </div>
+    <div *ngIf="displayedProducts.length == 0" >
+      <app-loading-spinner></app-loading-spinner>
+      </div>
   </div>
 </div>
