--- a/src/app/Component/admin-dashboard/admin-board/admin-board.component.css
+++ b/src/app/Component/admin-dashboard/admin-board/admin-board.component.css
@@ -19,6 +19,35 @@ mat-toolbar {
   left: 0;
   width: 100%;
 }
+.tab-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+.tab-buttons button {
+  flex: 1;
+  margin-right: 5px;
+  padding-bottom: 5px;
+  border: none;
+  background: none;
+  font-size: 16px;
+  color: black;
+  cursor: pointer;
+}
+
+.tab-buttons button::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background-color: red;
+  transition: width 0.3s ease;
+}
+
+.tab-buttons button.active::after {
+  width: 100%;
+  background-color: #127103;
+}
 
 .navigation ul li {
   position: relative;
