--- a/src/app/Component/Admin/add-category/add-category.component.html
+++ b/src/app/Component/Admin/add-category/add-category.component.html
@@ -4,9 +4,9 @@
       <h2 class="text-center mb-4">Add New Category</h2>
       <form class="row g-3 p-4 bg-light border rounded shadow-sm" (ngSubmit)="AddCategory(addCat)" #addCat="ngForm" enctype="multipart/form-data">
         <div class="text-center mb-4">
-          <div class="rounded-circle overflow-hidden d-inline-block" style="width: 150px; height: 150px; border: 2px solid #ccc;">
+          <!-- <div class="rounded-circle overflow-hidden d-inline-block" style="width: 150px; height: 150px; border: 2px solid #ccc;">
             <img *ngIf="image.value" [src]="image.value" class="img-fluid" alt="Preview">
-          </div>
+          </div> -->
         </div>
         <div class="col-md-12 mb-3">
           <label for="image" class="form-label">Choose image</label>
